--- a/src/main/webapp/errorpages/logout.xhtml
+++ b/src/main/webapp/errorpages/logout.xhtml
@@ -1,19 +1,17 @@
-<ui:composition template="/templates/errorpage.xhtml"
-                xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:p="http://primefaces.org/ui">
+<ui:composition template="/templates/errorpage.xhtml" xmlns="http://www.w3.org/1999/xhtml"
+xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+xmlns:p="http://primefaces.org/ui">
  <ui:define name="header_text">
   <span class="error"></span>
-  <script type="text/javascript">synctime=false; jQuery.ajaxSetup({
-  error: handleXhrError }); function handleXhrError(xhr){};
-  setTimeout("endAjaxStatus()", 1500);</script>
+  <script type="text/javascript">synctime=false; jQuery.ajaxSetup({ error: handleXhrError }); function
+  handleXhrError(xhr){}; setTimeout("endAjaxStatus()", 1500);</script>
  </ui:define>
  <ui:define name="content">
-  	 <p:outputPanel style="color:red;font-size:22px !important;margin-top:50px;text-align:center">#{txt['SESSION.FALSE']}</p:outputPanel>
+  <p:outputPanel style="color:red;font-size:22px !important;margin-top:50px;text-align:center">
+  #{txt['SESSION.FALSE']}</p:outputPanel>
   <p id="session_expired_button">
    <p:commandButton onclick="window.location='#{txt['SESSION.WUECAMPUS']}'"
-                    value="#{txt['SESSION.ERRORLINE']}" />
+   value="#{config['MOODLE_URL']}" />
   </p>
  </ui:define>
 </ui:composition>
